--- a/index.html
+++ b/index.html
@@ -4,218 +4,106 @@
 <meta charset="UTF-8">
 <title>Bluey's Avatar Commissions</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="VRChat avatar commissions by Bluey. SFW avatars, custom textures, Unity setup.">
 
 <style>
 :root {
-    --bg: linear-gradient(180deg, #c9e9ff, #ffd6f4);
-    --text: #2a2a2a;
-    --accent: #4a79ff;
-    --card: rgba(255,255,255,0.65);
-
-    --bg-dark: linear-gradient(180deg, #1a1b3a, #3b157a);
-    --text-dark: #e8e8ff;
-    --accent-dark: #9d79ff;
-    --card-dark: rgba(0,0,0,0.35);
+  --bg: linear-gradient(180deg,#c9e9ff,#ffd6f4);
+  --bg-dark: linear-gradient(180deg,#1a1b3a,#3b157a);
+  --card: rgba(255,255,255,.65);
+  --card-dark: rgba(0,0,0,.35);
+  --text:#2a2a2a;
+  --text-dark:#e8e8ff;
+  --accent:#4a79ff;
+  --accent-dark:#9d79ff;
 }
-
-body {
-    font-family: Arial, sans-serif;
-    background: var(--bg);
-    margin: 0;
-    color: var(--text);
-    transition: .35s;
-}
-
-body.dark {
-    background: var(--bg-dark);
-    color: var(--text-dark);
-}
-
-.container {
-    max-width: 900px;
-    width: 94%;
-    margin: 15px auto;
-    padding: 20px;
-}
-
-.card {
-    background: var(--card);
-    backdrop-filter: blur(10px);
-    border-radius: 18px;
-    padding: 18px;
-    margin-bottom: 16px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.12);
-}
-
-body.dark .card {
-    background: var(--card-dark);
-}
-
-h1, h2, h3 {
-    text-align: center;
-    color: var(--accent);
-}
-
-body.dark h1,
-body.dark h2,
-body.dark h3 {
-    color: var(--accent-dark);
-}
-
-p, li {
-    line-height: 1.7;
-}
-
-ul {
-    padding-left: 20px;
-}
-
-.button {
-    display: block;
-    width: 100%;
-    text-align: center;
-    padding: 14px;
-    border-radius: 14px;
-    background: var(--accent);
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-    margin-top: 10px;
-}
-
-body.dark .button {
-    background: var(--accent-dark);
-}
-
-.button.secondary {
-    background: transparent;
-    color: var(--accent);
-    border: 2px solid var(--accent);
-}
-
-body.dark .button.secondary {
-    color: var(--accent-dark);
-    border-color: var(--accent-dark);
-}
-
-.toggle-dark {
-    position: fixed;
-    bottom: 18px;
-    right: 18px;
-    padding: 14px 18px;
-    border-radius: 999px;
-    border: none;
-    background: var(--accent);
-    color: #fff;
-    cursor: pointer;
-    font-size: 1.1em;
-}
-
-body.dark .toggle-dark {
-    background: var(--accent-dark);
-}
-
-@media (max-width: 600px) {
-    h1 { font-size: 1.7em; }
-    h2 { font-size: 1.3em; }
-    .card { padding: 16px; }
-}
+body{margin:0;font-family:Arial;background:var(--bg);color:var(--text);transition:.3s}
+body.dark{background:var(--bg-dark);color:var(--text-dark)}
+.container{max-width:900px;width:94%;margin:15px auto}
+.card{background:var(--card);backdrop-filter:blur(10px);border-radius:18px;padding:18px;margin-bottom:16px}
+body.dark .card{background:var(--card-dark)}
+h1,h2{text-align:center;color:var(--accent)}
+body.dark h1,body.dark h2{color:var(--accent-dark)}
+ul{padding-left:20px}
+.button{display:block;text-align:center;padding:14px;border-radius:14px;background:var(--accent);color:#fff;text-decoration:none;font-weight:bold;margin-top:10px}
+body.dark .button{background:var(--accent-dark)}
+.button.secondary{background:none;color:var(--accent);border:2px solid var(--accent)}
+body.dark .button.secondary{color:var(--accent-dark);border-color:var(--accent-dark)}
+.toggle{position:fixed;bottom:18px;right:18px;padding:14px 18px;border-radius:999px;border:none;background:var(--accent);color:#fff}
+body.dark .toggle{background:var(--accent-dark)}
 </style>
 
 <script>
-function toggleDarkMode() {
-    document.body.classList.toggle("dark");
-    localStorage.setItem(
-        "theme",
-        document.body.classList.contains("dark") ? "dark" : "light"
-    );
+function toggleDark(){
+ document.body.classList.toggle("dark");
+ localStorage.setItem("theme",document.body.classList.contains("dark")?"dark":"light");
 }
-
-window.onload = () => {
-    if (localStorage.getItem("theme") === "dark") {
-        document.body.classList.add("dark");
-    }
-};
+window.onload=()=>{if(localStorage.getItem("theme")==="dark")document.body.classList.add("dark");};
 </script>
 </head>
 
 <body>
-
-<button class="toggle-dark" onclick="toggleDarkMode()" aria-label="Toggle dark mode">🌙</button>
+<button class="toggle" onclick="toggleDark()">🌙</button>
 
 <div class="container">
 
 <div class="card">
-    <h1>💙 Bluey's Avatar Commissions</h1>
-    <p style="text-align:center;">SFW • Cozy • Beginner-Friendly</p>
-
-    <a class="button" href="#contact">✨ Commission Me ✨</a>
+<h1>💙 Bluey's Avatar Commissions</h1>
+<p style="text-align:center;">SFW • Cozy • Beginner-Friendly</p>
+<a class="button" href="#contact">✨ Commission Me ✨</a>
 </div>
 
 <div class="card">
-    <h2>🐾 About Me</h2>
-    <p>
-        I’m <strong>Bluey</strong>, an 18+ VRChat avatar creator with around
-        <strong>2 years of experience</strong> in Unity and custom textures.
-        I focus on clean, comfortable avatars that are easy to use.
-    </p>
+<h2>🐾 About</h2>
+<p>
+I’m <strong>Bluey</strong>, an 18+ VRChat avatar creator with ~2 years of experience.
+I focus on clean, comfortable avatars made in Unity.
+</p>
 </div>
 
 <div class="card">
-    <h2>💸 Pricing</h2>
-    <ul>
-        <li><strong>Basic edits:</strong> £10–£20</li>
-        <li><strong>Custom textures:</strong> £25–£40</li>
-        <li><strong>Full re-texture:</strong> £55–£70</li>
-    </ul>
-    <p>Exact pricing depends on complexity.</p>
+<h2>💸 Pricing</h2>
+<ul>
+<li>Basic edits — £10–£20</li>
+<li>Custom textures — £25–£40</li>
+<li>Full re-texture — £55–£70</li>
+</ul>
 </div>
 
 <div class="card">
-    <h2>⚠️ Content Rules</h2>
-    <ul>
-        <li>This page is for <strong>SFW commissions</strong></li>
-        <li>Limited suggestive content may be accepted</li>
-        <li>No explicit or adult content here</li>
-        <li>Suggestive requests may cost slightly more</li>
-        <li>I reserve the right to refuse any request</li>
-    </ul>
-
-    <a class="button secondary" href="nsfw.html">🔞 View NSFW Commission Page</a>
+<h2>⚠️ Content Rules</h2>
+<ul>
+<li>This page is SFW only</li>
+<li>Very limited suggestive elements may be accepted</li>
+<li>No explicit adult content here</li>
+<li>Suggestive work may cost more</li>
+</ul>
+<a class="button secondary" href="nsfw.html">🔞 NSFW Commission Page</a>
 </div>
 
 <div class="card">
-    <h2>💳 Payment Policy</h2>
-    <p>
-        <strong>50% upfront payment</strong> is required to secure your slot.
-        The remaining 50% is paid once the commission is complete,
-        before final files are delivered.
-    </p>
+<h2>💳 Payment</h2>
+<p><strong>50% upfront</strong> is required. Remaining 50% is due before final files.</p>
 </div>
 
 <div class="card">
-    <h2>✨ How It Works</h2>
-    <ul>
-        <li>Contact me on Discord</li>
-        <li>Send references and ideas</li>
-        <li>Receive a quote</li>
-        <li>Pay 50% upfront</li>
-        <li>I begin work</li>
-        <li>Final payment</li>
-        <li>You receive your avatar</li>
-    </ul>
+<h2>✨ Process</h2>
+<ul>
+<li>Contact me</li>
+<li>Send references</li>
+<li>Get quote</li>
+<li>Pay 50%</li>
+<li>I work</li>
+<li>Final payment</li>
+<li>Delivery</li>
+</ul>
 </div>
 
 <div class="card" id="contact">
-    <h2>💬 Contact</h2>
-    <p><strong>Discord:</strong> puppo_boy</p>
-    <p>
-        <a href="tos.html">View Terms of Service</a>
-    </p>
+<h2>💬 Contact</h2>
+<p><strong>Discord:</strong> puppo_boy</p>
+<a href="tos.html">View Terms of Service</a>
 </div>
 
 </div>
-
 </body>
 </html>
