--- a/nsfw.html
+++ b/nsfw.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Bluey's NSFW Commissions</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+<div class="container">
+
+<div class="card">
+<h1>🔞 NSFW Avatar Commissions</h1>
+<p style="text-align:center;"><strong>18+ ONLY</strong></p>
+</div>
+
+<div class="card">
+<h2>⚠️ Rules</h2>
+<ul>
+<li>You must be 18+</li>
+<li>No illegal or harmful content</li>
+<li>No stolen assets</li>
+<li>I may refuse any request</li>
+</ul>
+</div>
+
+<div class="card">
+<h2>💷 Pricing</h2>
+<p>NSFW commissions usually cost more due to complexity.</p>
+</div>
+
+<div class="card">
+<h2>💬 Contact</h2>
+<p>Discuss privately on Discord.<br><strong>puppo_boy</strong></p>
+</div>
+
+<div class="card">
+<a class="button" href="index.html">← Back to SFW</a>
+</div>
+
+</div>
+</body>
+</html>
 
